--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,15 @@
-numpy>=1.20.0
+numpy
 pandas
-matplotlib>=3.4.0
+matplotlib
 seaborn
 scikit-learn
-opencv-python>=4.5.0
+opencv-python
 Pillow
 tensorflow
 torch
-jupyter>=1.0.0
+jupyter
 SpeechRecognition 
 moviepy
 imageio-ffmpeg
-imageio==2.4.1
-moviepy
-ipython>=7.0.0
+imageio
+ipython
